---
source: src/format.rs
expression: "format_str(indoc!\n{\n    r#\"\n            !a\n            +a\n            -a\n            foo(!a, +   b)\n            foo(- a , bar)\n            !\n            a\n            -  b\n            -42\n            + 42\n            !TRUE\n            ~foo\n            -foo + bar\n            -  (foo + bar)\n            ! foo && bar\n            ~  foo | bar\n        \"#\n})"
---
!a
+a
-a
foo(!a, +b)
foo(-a, bar)
!a
-b
-42
+42
!TRUE
~ foo
-foo + bar
-(foo + bar)
!foo && bar
~ foo | bar
